# claude-code-acp-rs

./: .gitignore  .gitmodules  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: audit.yml  cd.yml  ci.yml  pr.yml  release.yml
docker/: OTEL_SETUP.md  README.md  docker-compose.yml  jaeger-config.yaml  jaeger-ui.json  otel-collector-config.yaml  prometheus.yml
docs/: MESSAGE_ORDERING_ISSUE.md  PERMISSION_TODO.md  THINKING_MODE.md  THINKING_MODE_CN.md
examples/: thinking_mode.sh
specs/claude-code-acp/: claude-agent-sdk-feature.md  claude-code-acp-feature.md  claude-code-acp-plan.md  claude-code-acp-spec.md  claude-code-acp.md
src/: cli.rs  lib.rs  main.rs
src/agent/: core.rs  flush.rs  handlers.rs  mod.rs  runner.rs
src/converter/: mod.rs  notification.rs  prompt.rs  tool.rs
src/hooks/: callback_registry.rs  mod.rs  post_tool_use.rs  pre_tool_use.rs
src/mcp/: acp_server.rs  external.rs  mod.rs  registry.rs  server.rs
src/mcp/tools/: ask_user_question.rs  base.rs  bash.rs  bash_output.rs  edit.rs  exit_plan_mode.rs  glob.rs  grep.rs  kill_shell.rs  ls.rs  mod.rs  notebook_edit.rs  notebook_read.rs  read.rs  skill.rs  slash_command.rs  task.rs  task_output.rs  todo_write.rs  web_fetch.rs  web_search.rs  write.rs
src/permissions/: can_use_tool.rs  mod.rs
src/permissions/strategies/: strategy_trait.rs
src/session/: background_processes.rs  manager.rs  mod.rs  permission.rs  permission_manager.rs  permission_request.rs  prompt_manager.rs  session.rs  usage.rs  wrapped_child.rs
src/settings/: manager.rs  mod.rs  permission_checker.rs  rule.rs  watcher.rs
src/terminal/: client.rs  handle.rs  mod.rs
src/tracing/: error_ext.rs  mod.rs
src/types/: config.rs  error.rs  meta.rs  mod.rs  session.rs  tool.rs
