[package]
name = "claude-code-acp-rs"
version = "0.1.5"
authors = ["guochao.song <soddygo@qq.com>"]
edition = "2024"
rust-version = "1.90"
description = "Use Claude Code from any ACP client - A Rust implementation of Claude Code ACP Agent"
repository = "https://github.com/soddygo/claude-code-acp-rs"
homepage = "https://github.com/soddygo/claude-code-acp-rs"
documentation = "https://docs.rs/claude-code-acp-rs"
license = "MIT"
readme = "README.md"
keywords = ["claude", "acp", "agent", "ai", "anthropic"]
categories = ["development-tools", "api-bindings", "asynchronous"]
include = ["src/**/*.rs", "Cargo.toml", "LICENSE", "README.md"]

[lib]
name = "claude_code_acp"
path = "src/lib.rs"

[[bin]]
name = "claude-code-acp-rs"
path = "src/main.rs"

[dependencies]
# ACP Protocol SDK (sacp re-exports agent-client-protocol-schema types via sacp::schema)
# Using symposium-acp crates from crates.io
sacp = "10.1.0"

# Claude Agent SDK
claude-code-agent-sdk = { version = "0.1.19" }

# Async runtime
tokio = { version = "1.48", features = [
    "macros",
    "rt-multi-thread",
    "process",
    "io-util",
    "io-std",
    "sync",
    "time",
    "fs",
] }
tokio-util = { version = "0.7", features = ["compat"] }

# Async utilities
async-trait = "0.1"
futures = "0.3"
async-stream = "0.3"
pin-project = "1.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Concurrent collections
dashmap = "6.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# UUID generation
uuid = { version = "1.19", features = ["v4"] }

# Home directory detection
dirs = "6.0"

# File diff generation
similar = "2.7"

# Glob pattern matching
globset = "0.4"

# File system traversal
walkdir = "2.5"

# Regular expressions (for rule parsing)
regex = "1.10"

# Lazy static initialization
once_cell = "1.20"

# CLI argument parsing
clap = { version = "4.5", features = ["derive", "env"] }

# Time formatting for log filename
chrono = "0.4"

# File system watching (notify 7 is compatible with notify-debouncer-mini)
notify = "8"
notify-debouncer-mini = "0.7"

# TTY detection
atty = "0.2"

# OpenTelemetry (optional, for distributed tracing)
opentelemetry = { version = "0.31", optional = true }
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"], optional = true }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic", "http-proto"], optional = true }
tracing-opentelemetry = { version = "0.32", optional = true }

# MCP support (optional, for future use)
# rmcp = { version = "0.8", features = ["server", "transport-io"], optional = true }

[dev-dependencies]
tokio-test = "0.4"
pretty_assertions = "1"
tempfile = "3"
serial_test = "3"

[features]
default = ["otel"]
# mcp = ["rmcp"]
otel = ["opentelemetry", "opentelemetry_sdk", "opentelemetry-otlp", "tracing-opentelemetry"]
# Enable verbose debug logging for troubleshooting
verbose-debug = []

[lints.rust]
future_incompatible = { level = "warn", priority = -1 }
let-underscore = "warn"
missing_debug_implementations = "warn"
nonstandard_style = { level = "warn", priority = -1 }
rust_2018_idioms = { level = "warn", priority = -1 }
unused = { level = "warn", priority = -1 }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
doc_markdown = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
needless_pass_by_value = "allow"
similar_names = "allow"
struct_field_names = "allow"
too_many_lines = "allow"
wildcard_imports = "allow"
module_name_repetitions = "allow"
return_self_not_must_use = "allow"
unnecessary_literal_bound = "allow"
trivially_copy_pass_by_ref = "allow"
uninlined_format_args = "allow"
format_push_string = "allow"
map_unwrap_or = "allow"
collapsible_if = "allow"
manual_non_exhaustive = "allow"
match_same_arms = "allow"
redundant_closure_for_method_calls = "allow"
unused_self = "allow"
